# cybermind

./: .gitignore  AGENTS.md  DESIGN.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07cb46f3885a_add_news_table.py  39ad7951e876_add_daily_stats_table.py  541a4f3f5ac3_add_help_center_tables.py  541c5248b0f9_add_site_config_table.py  73ecc4b39518_初始化用户角色权限表.py  8081d2d076c7_add_contact_submission_table.py  b0f8b3d6353e_add_operation_video_table.py  c01c47264e2e_创建banners业务表.py  ce6949528739_add_description_to_banners.py  db0b2e9743b7_add_tracking_event_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: banners.py  contact.py  help.py  news.py  roles.py  site_config.py  tracking.py  upload.py  users.py  videos.py
backend/app/api/v1/admin/: __init__.py  auth.py  banners.py  contact.py  (+9 more)
backend/app/core/: app_exception.py  config.py  database.py  db_types.py  deps.py  exceptions.py  security.py  seed.py  time.py  validation_exception.py
backend/app/models/: __init__.py  banner.py  base.py  contact.py  help.py  news.py  site_config.py  stats.py  tracking.py  user.py  video.py
backend/app/schemas/: __init__.py  auth.py  banner.py  common.py  contact.py  help.py  news.py  role.py  site_config.py  tracking.py  user.py  video.py
backend/app/services/: auth.py  banner.py  contact.py  help.py  news.py  role.py  site_config.py  stats.py  tracking.py  user.py  video.py
backend/app/storage/: __init__.py  base.py  local.py  minio_storage.py
(+113 files in other folders)
