[project]
name = "cybermind-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]
